--- a/src/board.css
+++ b/src/board.css
@@ -1,9 +1,9 @@
-.full-list {
+.lists {
     display: flex;
     align-items: flex-start;
 }
 
-.list-item {
+.list-wrapper {
     background: #E0E0E0;
     margin: 0 10px;
     padding: 8px;
@@ -11,16 +11,10 @@
     border-radius: 4px;
 }
 
-.list-item:first-child {
+.list-wrapper:first-child {
     margin-left: 0;
 }
 
-
-
-.list-item:last-child {
+.list-wrapper:last-child {
     margin-right: 0;
-}
-
-.board{
-  background-color: royalblue;
 }
